API 增加和修改